<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/you_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_send"
        app:layout_constraintBottom_toTopOf="@+id/send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="34dp"
        android:layout_marginTop="34dp" />


    <EditText
        android:id="@+id/send"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/br"
        android:padding="10dp"
        android:hint="@string/gbp"
        android:drawablePadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/you_send"
        app:layout_constraintBottom_toBottomOf="@id/they_receive"
        android:background="@drawable/rounded_edittext" />

    <TextView
        android:id="@+id/they_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="34dp"
        android:text="@string/they_receive"
        app:layout_constraintBottom_toTopOf="@+id/receive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send" />

    <EditText
        android:id="@+id/receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/pol"
        android:drawablePadding="8dp"
        android:hint="@string/pln"
        android:inputType="numberDecimal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/they_receive" />

    <TextView
        android:id="@+id/rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="34dp"
        android:text="@string/rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receive" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toEndOf="@+id/rate_title"
        app:layout_constraintTop_toBottomOf="@+id/receive" />

    <TextView
        android:id="@+id/effective_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="34dp"
        android:text="@string/last_data_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate" />

    <TextView
        android:id="@+id/effective_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/rate"
        app:layout_constraintStart_toEndOf="@+id/effective_date_title"
        />


    <Button
        android:id="@+id/clear_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:text="@string/clear_button"
        app:layout_constraintStart_toStartOf="@+id/horizontal_guideline"
        app:layout_constraintTop_toBottomOf="@+id/effective_date_title" />

    <Button
        android:id="@+id/charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="34dp"
        android:text="@string/charge_button"
        app:layout_constraintEnd_toStartOf="@+id/horizontal_guideline"
        app:layout_constraintTop_toBottomOf="@+id/effective_date_title" />


</androidx.constraintlayout.widget.ConstraintLayout>